<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gas Mileage</string>

    <!-- Common Strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="number_error">Must be greater than 0</string>
    <string name="string_error">Please enter a value</string>

    <!-- Default values -->
    <string name="default_vehicle">My Car</string>

    <!-- VehicleActivity -->
    <string name="vehicle_unknown">Unknown</string>
    <string name="vehicle_statistics">Statistics</string>
    <string name="vehicle_entries">Fill-Ups</string>
-    <!-- Statistics -->
    <string name="stat_best_mileage">Best mileage</string>
    <string name="stat_avg_mileage">Average mileage</string>
    <string name="stat_worst_mileage">Worst mileage</string>
    <string name="stat_last_mileage">Last mileage</string>

    <!-- Main Menu -->
    <string name="menu_fill_up">Fill-Up</string>
    <string name="menu_add_vehicle">Add Vehicle</string>
    <string name="menu_edit_vehicle">Edit Vehicle</string>
    <string name="menu_delete_vehicle">Delete Vehicle</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <!-- Entries Menu -->
    <string name="entry_menu_edit">Edit Fill-up</string>
    <string name="entry_menu_delete">Delete Fill-up</string>

    <!-- Preferences -->
    <string name="prefs_title">Settings</string>
    <string name="prefs_units_category">Units</string>
    <string name="prefs_title_volume_units">Volume Units</string>
    <string name="prefs_summary_volume_units">Units for volumes in Litres or Gallons</string>
    <string name="prefs_title_distance_units">Distance Units</string>
    <string name="prefs_summary_distance_units">Units for distances in Kilometres or Miles</string>
    <string name="prefs_title_mileage_units">Mileage Units</string>
    <string name="prefs_summary_mileage_units">Units to display mileage in</string>
    <string name="prefs_settings_category">Settings</string>
    <string name="prefs_title_show_reminder">Show Reset trip odometer Reminder</string>
    <string name="prefs_summary_show_reminder">Shows a dialog after you fill-up reminding you to reset your trip odometer</string>

    <!-- Entry Dialog -->
    <string name="entry_dialog_title">Fill-Up</string>
    <string name="entry_dialog_note">Notes</string>

    <!-- Delete Vehicle Dialog -->
    <string name="delete_vehicle_dialog_title">Delete Vehicle</string>
    <string name="delete_vehicle_dialog_cant_delete">You cannot delete your last vehicle. Add another vehicle before deleting this one.</string>
    <string name="delete_vehicle_dialog_text">Are you sure you want to delete this vehicle? This will delete this vehicle and all of it\'s fill-ups. This cannot be undone.</string>

    <!-- Vehicle Dialog -->
    <string name="vehicle_dialog_add_title">Add Vehicle</string>
    <string name="vehicle_dialog_edit_title">Edit Vehicle</string>
    <string name="vehicle_dialog_delete_title">Delete Vehicle</string>
    <string name="vehicle_dialog_label">Vehicle Name</string>
    <string name="vehicle_dialog_title_add">Add Vehicle</string>
    <string name="vehicle_dialog_title_edit">Edit Vehicle</string>
    <string name="vehicle_dialog_hint">Vehicle Name</string>

    <!-- Reset trip odometer Dialog -->
    <string name="reset_dialog_checkbox">Do not show this dialog again</string>
    <string name="reset_dialog_title">Remember: Reset your trip odometer</string>

    <!-- Help Activity -->
    <string name="help_title">Help</string>
    <string name="help_text">
<![CDATA[Other mileage tracking applications require you to add entries every time you fill up and if you forget, it is difficult to catch up. Gas Mileage is different, just remember to reset your trip odometer every time you fill up your tank and then add entries when you remember.<br />
        <br />
        <b>To start using the application,</b><br />
        <br />
        <b>1 -</b> Fill-up your car and reset your trip odometer. Do not enter a reading.<br />
        <br />
        <b>2 -</b> Next time you fill-up your car, enter the amount of fuel you added and the distance you have driven, then reset your trip odometer.<br />
        <br />
        <b>3 -</b> To enter a fill-up in the application, select your vehicle from the dropdown and press to add button in the upper right.<br />
        <br />
        If you ever forget to reset your trip odometer when you fill up, just do it next time.<br />
        <br />
        If you have multiple vehicles, manage them using the menu and select the current vehicle in the dropdown. Icons make it easy to distinguish between vehicles.<br />
        <br />
        To edit or delete any previous fill-ups, long press on them to bring up a menu. Fill-ups with notes will have a note icon. Just tap the note icon to view the note.
        ]]>
    </string>
    <string name="title_activity_entry">Fill-up</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="entry_activity_date">Date:</string>
    <string name="entry_activity_kilometers">Distance:</string>
    <string name="entry_activity_liters">Fuel:</string>
    <string name="menu_rate">Rate App</string>

</resources>
