<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_fill_up"
          android:title="@string/menu_fill_up"
          android:icon="@drawable/ic_menu_add"
          android:showAsAction="always"
            />

    <item android:id="@+id/menu_add_vehicle"
          android:title="@string/menu_add_vehicle" />

    <item android:id="@+id/menu_edit_vehicle"
          android:title="@string/menu_edit_vehicle" />

    <item android:id="@+id/menu_delete_vehicle"
          android:title="@string/menu_delete_vehicle" />

    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          android:icon="@drawable/ic_menu_preferences"
          android:showAsAction="never" />

    <item android:id="@+id/menu_help"
        android:title="@string/menu_help" />

</menu>
