<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

  <TextView android:id="@+id/vehicle_dialog_title"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/vehicle_dialog_add_title" />

  <EditText android:id="@+id/vehicle_dialog_vehicle"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

  <LinearLayout
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    <Button android:id="@+id/entry_dialog_ok"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add" />

    <Button android:id="@+id/entry_dialog_cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cancel" />

  </LinearLayout>

</LinearLayout>